CodeContext updates